# Vellum

./: .gitignore  LOOK_AND_FEEL.md  README.md  ROADMAP.md  package.json
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: client.rs  mod.rs
src-tauri/src/auth/: crypto.rs  mod.rs
src-tauri/src/scanner/: mod.rs  parser.rs
src-tauri/src/vault/: crypto.rs  mod.rs
src/components/: AuthScreen.tsx  Dashboard.tsx
vellum-api/: .env.example  Cargo.toml
vellum-api/migrations/: 001_init.sql
vellum-api/src/: main.rs
vellum-api/src/middleware/: mod.rs
vellum-api/src/models/: mod.rs
vellum-api/src/routes/: auth.rs  entries.rs  members.rs  mod.rs  projects.rs
