[package]
name = "vellum"
version = "0.1.0"
description = "Sovereign environment variable manager"
edition = "2021"

[lib]
name = "vellum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
